[package]
name = "imagespells"
version = "0.1.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Image", "Picture", "Photo", "Codec", "Decoder", "Encoder", "JPEG", "JPG", "WebP", "PNG" ]
categories = [ "multimedia::encoding", "multimedia::images" ]
#description = "TODO"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/imagespells"
repository = "https://github.com/myfreeweb/imagespells"

[features]
default = ["jpeg"]#, "png", "webp"]
jpeg = ["kamadak-exif", "mozjpeg-sys"]
#png = ["oxipng"]
#webp = ["libwebp-sys"]

[dependencies]
image = "0.13.0"
kamadak-exif = { version = "0.2.1", optional = true }
mozjpeg-sys = { version = "0.3.2", optional = true }
#oxipng = { path = "../../shssoichiro/oxipng", optional = true }
#libwebp-sys = { version = "0.1.0", optional = true }
